11/24/2004  version 0.3 pre2    Ian Lewis <IanLewis@member.fsf.org>

    * Changed how the tree editor and renderers work so that the AdapterNode
      doesn't have tree specific code in it.
    * Fixed bug in the find and replace dialog that caused a null pointer
      exception.
    * Added an 'Ignore Case' Check box to the find dialog

11/23/2004  version 0.3 pre1    Ian Lewis <IanLewis@member.fsf.org>

    * Obsoleted the DefaultViewTreeNode class.

11/22/2004  version 0.2 beta    Ian Lewis <IanLewis@member.fsf.org>

    * Redid how the view human readable names are retrieved.
    * Added preliminary support for the schema view (not enabled).

10/8/2004   version 0.2 pre25   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug that didn't update the tab width for the source view when
      you changed it in the options
    * Fixed bugs where the menu bar wasn't updated properly when closing files
      and changing views

10/2/2004   version 0.2 pre24   Ian Lewis <IanLewis@member.fsf.org>

    * Added support for properties to remember the size and layout of the
      new options panel
    * Fixed the reload fuctionality so that it truely reloads the file and
      doesn't write the whole thing to a string object.
    * Fixed a bug that kept files open too long by not closing the Reader
      object used to read them.

9/24/2004   version 0.2 pre23   Ian Lewis <IanLewis@member.fsf.org>

    * Changed the layout of the options dialog by taking some jEdit code.
      Should be more flexable for adding different options categories etc. Not
      to mention that it would look better.

9/21/2004   version 0.2 pre22   Ian Lewis <IanLewis@member.fsf.org>

    * Documents opened directly into the source view are no longer formatted
      automatically when the format-pretty-print property is true. This
      prevents loading documents where whitespace matters without marking
      them dirty.
    * Views now remove listeners that they add to the DocumentBuffer