@@ -1,3 +1,8 @@
+11/30/2004  version 0.3 pre3    Ian Lewis <IanLewis@member.fsf.org>
+
+    * Added some more code for the SchemaView. jsXe will require JGraph for a
+      bit, until views become plugins and are moved into their own jars.
+
 11/24/2004  version 0.3 pre2    Ian Lewis <IanLewis@member.fsf.org>
 
     * Changed how the tree editor and renderers work so that the AdapterNode
